3rd_year/2nd_semester/C/bloco2/b2_01/Hello.g4
grammar Hello;   // Define a grammar called Hello
main: (greetings | bye)*;
greetings:'hello' name;  // match keyword hello followed by an identifier
bye: 'bye' name;
name: word+;
word: ID;
ID : [a-zA-Z]+ ;  // match lower−case identifiers
WS : [ \t\r\n]+ -> skip;   // skip spaces, tabs, newlines, \r (Windows)
